--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 							 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.univtln.spelerin</groupId>
+	<groupId>fr.utln.logic.firstorder</groupId>
 	<artifactId>TP</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>TP</name>
@@ -57,6 +57,13 @@
 				<version>3.11.0</version>
 				<configuration>
 					<release>21</release>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 
@@ -68,4 +75,4 @@
 			</plugin>
 		</plugins>
 	</build>
-</project>
+</project>	
